fix small alignment issues in user profile

--- a/drupal/sites/all/themes/antistatique/assets/sass/layout/header.scss
+++ b/drupal/sites/all/themes/antistatique/assets/sass/layout/header.scss
@@ -232,6 +232,10 @@ category: Layout - Header
   }
   h2 {
     padding-bottom: 38px;
+
+    .field-teammate-job-title {
+      max-width: none;
+    }
   }
 
   header {
